--- a/simple.html
+++ b/simple.html
@@ -66,6 +66,10 @@
 			}
 		</style>
 		<script>
+			Array.prototype.last = function () {
+				return this[this.length - 1];
+			}
+
 			let sample = true;
 
 			const $ = (id) => document.getElementById(id);
@@ -88,9 +92,20 @@
 				edges: [],
 				EVs: {},
 				nodepos: {}
-			}, animation;
+			}, animation, loop = 0;
 
 			let ctx;
+
+			function deepClone (aObject) {
+				if (!aObject) return aObject;
+				let v;
+				let bObject = Array.isArray(aObject) ? [] : {};
+				for (const k in aObject) {
+					v = aObject[k];
+					bObject[k] = (typeof v === "object") ? deepClone(v) : v;
+				}
+				return bObject;
+			}
 
 			window.onload = () => {
 				ctx = $('canvas').getContext('2d');
@@ -117,12 +132,12 @@
 						"P1": {
 							"name": "P1",
 							"source": "V1",
-							"currentNode": "V1",
+							"pos": "V1",
 							"destination": "V8",
-							"initBattery": 8,
-							"charging": 2,
+							"initBattery": 0,
+							"charging": 5,
 							"discharging": 4,
-							"max": 100,
+							"max": 5,
 							"speed": 10,
 							"isCharging": true,
 							"route": []
@@ -130,9 +145,9 @@
 						"P2": {
 							"name": "P2",
 							"source": "V2",
-							"currentNode": "V2",
+							"pos": "V2",
 							"destination": "V8",
-							"initBattery": 9,
+							"initBattery": 0,
 							"charging": 10,
 							"discharging": 1,
 							"max": 30,
@@ -143,12 +158,12 @@
 						"P3": {
 							"name": "P3",
 							"source": "V3",
-							"currentNode": "V3",
+							"pos": "V3",
 							"destination": "V6",
-							"initBattery": 4,
+							"initBattery": 0,
 							"charging": 5,
 							"discharging": 20,
-							"max": 120,
+							"max": 10,
 							"speed": 15,
 							"isCharging": false,
 							"route": []
@@ -156,12 +171,12 @@
 						"P4": {
 							"name": "P4",
 							"source": "V4",
-							"currentNode": "V4",
+							"pos": "V4",
 							"destination": "V1",
-							"initBattery": 4,
-							"charging": 2,
+							"initBattery": 0,
+							"charging": 1,
 							"discharging": 3,
-							"max": 100,
+							"max": 10,
 							"speed": 12,
 							"isCharging": false,
 							"route": []
@@ -245,7 +260,7 @@
 							if (veh.currentBattery > veh.max) veh.currentBattery = veh.max;
 							break;
 						}
-						case 'discharge': {
+						case 'wait': {
 							veh.isCharging = false;
 							vCoords = info.nodepos[last.at];
 							veh.pos = last.at;
@@ -361,8 +376,7 @@
 				// since with the constraint removed, every car's optimal path can be calculated independently.
 				// The heuristic value is simply the maximum of the optimal times for each car.
 
-				return Object.keys(EVs).map(car => {
-					let EV = EVs[car];
+				let hArr = EVs.map(EV => {
 					const maxDist = EV.max * EV.discharging;
 
 					// Start Dijkstra
@@ -371,8 +385,8 @@
 						distances[city] = largeNum;
 						iterate.push(city);
 					});
-					distances[EV.currentNode] = 0;
-					parents[EV.currentNode] = null;
+					distances[EV.pos] = 0;
+					parents[EV.pos] = null;
 					while (iterate.length) {
 						let min = largeNum + 1, minCity = null;
 						iterate.forEach(city => {
@@ -399,7 +413,7 @@
 					let requiredBattery = distances[EV.destination] / EV.discharging - EV.currentBattery;
 					time += requiredBattery / EV.charging; // Required charging time
 					if (animated) {
-						// generate route for animation purposes
+						// Generate route for animation purposes
 						let lN = null, cT = 0, cB = EV.initBattery;
 						chain.forEach(node => {
 							if (node === chain[0]) return lN = node;
@@ -408,7 +422,7 @@
 								EV.route.push({type: 'charge', at: lN, time: cT, battery: cB});
 								cT += (reqBat - cB) / EV.charging;
 								cB = reqBat;
-								EV.route.push({type: 'discharge', at: lN, time: cT, battery: cB});
+								EV.route.push({type: 'wait', at: lN, time: cT, battery: cB});
 							}
 							EV.route.push({type: 'travel', from: lN, to: node, time: cT, battery: cB});
 							cT += graph[node][lN] / EV.speed;
@@ -417,7 +431,104 @@
 						});
 					}
 					return time;
-				}).reduce((a, b) => a < b ? b : a, 0);
+				});
+				if (!animated) return hArr.reduce((a, b) => a < b ? b : a, 0);
+				if (animated === 'array') return hArr;
+				if (animated !== true) return null;
+
+				let cities = Object.keys(graph);
+				stagger: while (true) {
+					const chargeMap = {};
+					console.log(loop++);
+					if (loop > 10) return alert(`10 loops crossed, exiting`);
+					Object.keys(graph).forEach(city => {
+						chargeMap[city] = [];
+					});
+					EVs.forEach(EV => {
+						EV.route.forEach((event, index) => {
+							if (event.type === 'charge') {
+								let cDur = {
+									name: EV.name,
+									from: event.time,
+									to: EV.route[index + 1].time
+								}, comp = event.time, flag;
+								for (let i = 0; i < chargeMap[event.at].length; i++) if (chargeMap[event.at][i].from > comp) {
+									chargeMap[event.at].splice(i, 0, cDur);
+									flag = true;
+									break;
+								}
+								if (!flag) chargeMap[event.at].push(cDur);
+							}
+						});
+					});
+					// console.log(JSON.stringify(chargeMap, null, 2));
+					// Handle overlaps
+					let flag = true;
+					for (let x = 0; x < cities.length; x++) {
+						let city = cities[x];
+						let eA = chargeMap[city].length;
+						for (let i = 0; i < eA; i++) for (let j = i + 1; j < eA; j++) {
+							let e1 = chargeMap[city][i], e2 = chargeMap[city][j];
+							if (e1.to > e2.from) {
+								// Two vehicles attempting to charge at the same time. The vehicle that has a shorter remaining path is delayed.
+								// Even if there are more than two, the next pair will be staggered on the next iteration.
+								// The same vehicle may be delayed multiple times, depending on the situation.
+								console.log(e1.name, e2.name, city);
+								let delta = e1.to - e2.from, [EV1, EV2] = [e1.name, e2.name].map(label => EVs.find(EV => EV.name === label));
+								console.log(EV1.route, EV2.route);
+								let newEVs = [EV1, EV2].map(EV => deepClone(EV));
+								newEVs.forEach(EV => {
+									EV.pos = city;
+									EV.currentBattery = EV.initBattery;
+									for (let k = 0; k < EV.route.length; k++) {
+										let evt = EV.route[k];
+										if (evt.time > e1.from) break;
+										switch (evt.type) {
+											case 'charge': {
+												EV.currentBattery += (EV.route[k + 1].time - evt.time) * EV.charging;
+												if (EV.currentBattery > EV.max) EV.currentBattery = EV.max;
+												break;
+											}
+											case 'travel': {
+												EV.currentBattery -= graph[evt.from][evt.to] / EV.discharging;
+												break;
+											}
+										}
+									}
+								});
+								let hr = heuristic(graph, newEVs, 'array');
+								if (hr[0] >= hr[1]) {
+									// First vehicle charges
+									console.log(`Updated ${EV2.name}`);
+									for (let k = 0; k < EV2.route.length; k++) {
+										let evt = EV2.route[k];
+										if (evt.time < e2.from) continue;
+										evt.time += delta;
+									}
+								} else {
+									// Second vehicle charges
+									console.log(`Updated ${EV1.name}!`);
+									console.log(delta, e2.from);
+									let switchFlag = false;
+									for (let k = 0; k < EV1.route.length; k++) {
+										let evt = EV1.route[k];
+										if (evt.time < e2.from) continue;
+										if (evt.time >= e2.from) {
+											if (!switchFlag) {
+												switchFlag = true;
+												EV1.route.splice(k, 0, { type: 'wait', time: e2.from });
+											}
+											continue;
+										}
+										evt.time += delta;
+									}
+								}
+								continue stagger;
+							}
+						}
+					}
+					break;
+				}
 			}
 
 			function run () {
@@ -427,7 +538,7 @@
 						info.EVs[label] = {route: []};
 						let EV = info.EVs[label];
 						EV.source = $(`${label}source`).value.trim();
-						EV.currentNode = EV.source;
+						EV.pos = EV.source;
 						EV.destination = $(`${label}dest`).value.trim();
 						EV.currentBattery = EV.initBattery = abs(parseFloat($(`${label}init`).value.trim()));
 						EV.charging = abs(parseFloat($(`${label}charge`).value.trim()));
@@ -448,7 +559,9 @@
 					graph[edge.to][edge.from] = edge.weight;
 				});
 
-				heuristic(graph, info.EVs, true);
+				Object.values(info.EVs).forEach(EV => EV.currentBattery = EV.initBattery);
+
+				heuristic(graph, Object.values(info.EVs), true);
 				animate(info);
 			}
 
